--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,27 +13,23 @@ jobs:
     name: Code Quality
     runs-on: ubuntu-latest
 
-     strategy:
-       matrix:
-          node-version: [14.x]
-
     steps:
       - uses: actions/checkout/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 14
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '14'
 
       - uses: actions/cache@v2
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-${{matrix.node-version}}-${{ hasFiles('**/package.lock.json') }}
+          key: ${{ runner.os }}-14-${{ hasFiles('**/package.lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-${{matrix.node-version}}
+            ${{ runner.os }}-14
       - name: Install NPM Dependencies
         run: npm ci
-      
+
       - name: Lint
         run: npm un lint
 
@@ -43,4 +39,3 @@ jobs:
       - name: Test
         timeout-minutes: 10
         run: npm run test:ci:cov
-
