--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     name: Code Quality
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Use Node.js 14
         uses: actions/setup-node@v2
