--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,7 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npm un lint
-
-      - name: Build
-        run: npm run build
+        run: npm run lint
 
       - name: Test
         timeout-minutes: 10
