--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,28 +13,19 @@ jobs:
     name: Code Quality
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Use Node.js 14
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
-
-      - uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-14-${{ hasFiles('**/package.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-14
+          cache: 'npm'
 
       - name: Install NPM Dependencies
         run: npm ci
 
       - name: Lint
-        run: npm un lint
-
-      - name: Build
-        run: npm run build
+        run: npm run lint
 
       - name: Test
         timeout-minutes: 10
