modified promote workflow

--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -70,7 +70,7 @@ jobs:
         env:
           prNumber: ${{ fromJSON(steps.create.outputs.result).number }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const { prNumber } = process.env;
             github.pulls.update({
