--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -61,14 +61,14 @@ jobs:
                 clientMutationId
               }
             }
-          pullid: ${{ fromJSON(steps.create.outputs.result).id }}
-          headline: ${{ fromJSON(steps.create.outputs.result ).headline }}
+          pullid: ${{ steps.create.outputs.result && fromJSON(steps.create.outputs.result).id }}
+          headline: ${{ steps.create.outputs.result && fromJSON(steps.create.outputs.result).headline }}
 
       - name: Close PR id auto-merge setup fails
         uses: actions/github-script@v3
         if: steps.auto-merge.outcome == 'failure'
         env:
-          prNumber: ${{ fromJSON(steps.create.outputs.result).number }}
+          prNumber: ${{ steps.create.outputs.result && fromJSON(steps.create.outputs.result).number }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
