--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set environment variables
+        run: .github/common/set-env-vars.sh
+
       - name: Create PR
         id: create
         uses: actions/github-script@v3
@@ -44,11 +47,11 @@ jobs:
               base,
             });
             return { id, number, headline: `"${title} (#${number})"` };
+          time: '30s'
 
       - name: Set PR as auto-mergable # This requires auto-merge to be enabled in the repo
         id: auto-merge
         continue-on-error: true
-        if: steps.create.outputs.pull-request-operation == 'created'
         uses: octokit/graphql-action@v2.x
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -67,7 +70,6 @@ jobs:
 
       - name: Close PR id auto-merge setup fails
         uses: actions/github-script@v3
-        if: steps.auto-merge.outcome == 'failure'
         env:
           prNumber: ${{ steps.create.outputs.result && fromJSON(steps.create.outputs.result).number }}
         with:
